--- a/templates/result.html
+++ b/templates/result.html
@@ -49,7 +49,7 @@
 			</div>
 			<div class="pure-u-1 pure-u-md-1-2">
 				<p>We think you're at: {{ location[0] | round(2) }}, {{ location[1] | round(2) }}</p>
-				<p>{{ location_meta }}</p>
+				<p>({{ location_meta }})</p>
 			</div>
 		</div>
 	</body>
